# barstar-backend

./: .env.example  .gitignore  Makefile  README.md  agent-log.md  agents.md  alembic.ini  docker-compose.yaml  ext.py  pyproject.toml
.devcontainer/: devcontainer.json  post-attach.sh  postAttach.sh  postCreate.sh
.github/: copilot-instructions.md
.github/workflows/: test.yml
alembic/: README  README.md  env.py  script.py.mako
alembic/versions/: 20240505_0001_create_user_table.py  20251024_a876e14e10d8_initial_schema.py  20251025_0c29c219515d_initial_schema.py  20251025_59c342e69814_initial_schema.py  20251027_3f3cddf9c1e1_initial_schema.py  20251028_2bfc49c02a55_initial_schema.py  20251028_cbd6eaf0695b_initial_schema.py  20251104_b50ce2e8a41a_add_user_location_table.py
app/: __init__.py  main.py
app/api/: README.md  __init__.py  deps.py  health.py  routes.py
app/core/: config.py
app/db/: __init__.py  base.py  session.py  types.py
app/models/: README.md  __init__.py  followers.py  footsteps.py  friends.py  operators.py  user.py  user_location.py  users.py  venue.py  venues.py
app/schemas/: __init__.py  followers.py  footsteps.py  friends.py  location.py  operators.py  user.py  users.py  venue.py  venues.py
app/services/: __init__.py  task_queue.py
deploy/: Dockerfile  docker-compose.yaml  entrypoint.sh
scripts/: create_table.py  reset_alembic.py  reset_db.py  seed_db.py
scripts/sql/: get_index.sql
tests/: conftest.py  test_followers.py  test_health.py  test_operators.py  test_user_locations.py  test_users.py  test_venues.py
